--- a/django_projects/mysite/cats/templates/cats/breed_form.html
+++ b/django_projects/mysite/cats/templates/cats/breed_form.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{% if form.instance.id %}Update Breed{% else %}Add Breed{% endif %}</title>
-</head>
-<body>
-    <h1>{% if form.instance.id %}Update Breed{% else %}Add Breed{% endif %}</h1>
-    
-    <p>
-        <a href="{% url 'cats:cat_list' %}">Cats</a> |
-        <a href="{% url 'cats:breed_list' %}">Breeds</a>
-    </p>
+{% extends "base_bootstrap.html" %}
 
-    <form method="post">
-        {% csrf_token %}
-        <table>
-            {{ form.as_table }}
-        </table>
-        <input type="submit" value="Submit">
-    </form>
+{% block title %}{% if form.instance.id %}Update Breed{% else %}Add Breed{% endif %}{% endblock %}
 
-    <p><a href="{% url 'cats:breed_list' %}">Cancel</a></p>
-</body>
-</html>
+{% block content %}
+<h1>{% if form.instance.id %}Update Breed{% else %}Add Breed{% endif %}</h1>
+
+<p>
+    <a href="{% url 'cats:cat_list' %}">Cats</a> |
+    <a href="{% url 'cats:breed_list' %}">Breeds</a>
+</p>
+
+<form method="post">
+    {% csrf_token %}
+    <table>
+        {{ form.as_table }}
+    </table>
+    <input type="submit" value="Submit">
+</form>
+
+<p><a href="{% url 'cats:breed_list' %}">Cancel</a></p>
+{% endblock %}
