--- a/django_projects/mysite/cats/templates/cats/breed_list.html
+++ b/django_projects/mysite/cats/templates/cats/breed_list.html
@@ -1,30 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Breeds</title>
-</head>
-<body>
-    <h1>Breeds</h1>
-    
-    <p>
-        <a href="{% url 'cats:cat_list' %}">Cats</a> |
-        <a href="{% url 'cats:breed_list' %}">Breeds</a>
-    </p>
+{% extends "base_bootstrap.html" %}
 
-    {% if breed_list %}
-        <ul>
-            {% for breed in breed_list %}
-            <li>
-                {{ breed.name }}
-                (<a href="{% url 'cats:breed_update' breed.id %}">Update</a> |
-                <a href="{% url 'cats:breed_delete' breed.id %}">Delete</a>)
-            </li>
-            {% endfor %}
-        </ul>
-    {% else %}
-        <p>There are no breeds in the library.</p>
-    {% endif %}
+{% block title %}Breeds{% endblock %}
 
-    <p><a href="{% url 'cats:breed_create' %}">Add a breed</a></p>
-</body>
-</html>
+{% block content %}
+<h1>Breeds</h1>
+
+<p>
+    <a href="{% url 'cats:cat_list' %}">Cats</a> |
+    <a href="{% url 'cats:breed_list' %}">Breeds</a>
+</p>
+
+{% if breed_list %}
+    <ul>
+        {% for breed in breed_list %}
+        <li>
+            {{ breed.name }}
+            (<a href="{% url 'cats:breed_update' breed.id %}">Update</a> |
+            <a href="{% url 'cats:breed_delete' breed.id %}">Delete</a>)
+        </li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>There are no breeds in the library.</p>
+{% endif %}
+
+<p><a href="{% url 'cats:breed_create' %}">Add a breed</a></p>
+{% endblock %}
