--- a/django_projects/mysite/home/templates/registration /logged_out.html
+++ b/django_projects/mysite/home/templates/registration /logged_out.html
@@ -1,7 +1,6 @@
 {% extends "base_bootstrap.html" %}
 
 {% block content %}
-<h1>Logged Out</h1>
-<p>You have been successfully logged out.</p>
-<p><a href="{% url 'login' %}">Click here to log in (again) </a></p>
+  <p>Logged out!</p>
+  <a href="{% url 'login'%}">Click here to login again.</a>
 {% endblock %}
