--- a/django_projects/mysite/ads/templates/ads/ad_detail.html
+++ b/django_projects/mysite/ads/templates/ads/ad_detail.html
@@ -1,4 +1,4 @@
-{% extends "base_bootstrap.html" %}
+{% extends "base_menu.html" %}
 {% load humanize %}
 {% block content %}
 <span style="float: right;">
